# mimir-analyzer

./: .cookiecutter.json  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  tasks.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  release-please.yml
mimir_analyzer/: cli.py  config.py  log.py
tests/unit/: test_cli.py  test_logging.py
